--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "5ab7e4b1-0108-40b1-901b-940fb9fb1608",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "import requests\n",
     "import re\n",
     "import string\n",
+    "import json\n",
     "\n",
     "import pymorphy2\n",
     "lemmer = pymorphy2.MorphAnalyzer()\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "22b4a420-c9a7-4fba-a953-c306550bd2e1",
    "metadata": {},
    "outputs": [],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "f271ebd5-0728-4dfd-9f5f-0e5a102c3457",
    "metadata": {},
    "outputs": [],
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "32c6531b-60ec-4667-a1d3-be3311753b89",
    "metadata": {},
    "outputs": [
@@ -268,22 +269,27 @@
    "id": "6d94549c-4c3c-4402-be8e-dce8d18c1cb2",
    "metadata": {},
    "source": [
-    "Сформируем списки эталонных переводов."
+    "Сформируем списки эталонных переводов. Запускать следующую ячейку, если файла \"backup.json\" нет. Если есть, то вторую, после неё."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "ba5ea00b-d766-46c4-8c7e-8d83086fb5c4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n",
+      "Часть записей обработана.\n"
      ]
     }
    ],
@@ -305,11 +311,25 @@
     "        else:\n",
     "            # Дозаписываем соответствующее английское предложение.\n",
     "            sequences[-1].append(record)\n",
-    "            print('Одна запись создана.')\n",
     "\n",
     "        i += 1\n",
+    "        if i % 50 == 0:\n",
+    "            print('Часть записей обработана.')\n",
     "\n",
-    "sequences"
+    "# Сохраняем эталонные переводы, чтобы не проводить эту процедуру каждый раз.\n",
+    "with open('backup.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(sequences, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0f5fb5db-639b-41d9-a1df-e33782a84141",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('backup.json', 'r', encoding='utf-8') as f:\n",
+    "    sequences = json.load(f)"
    ]
   },
   {
@@ -322,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "af6e3873-ca3d-4d71-96ba-255d87dc8885",
    "metadata": {},
    "outputs": [],
@@ -385,7 +405,7 @@
     "        if '</think>' in answer:\n",
     "            answer = answer.split('</think>')[1]\n",
     "\n",
-    "        return asnwer.strip()"
+    "        return answer.strip()"
    ]
   },
   {
@@ -393,32 +413,67 @@
    "id": "22f8d2b1-867d-4730-be38-12c7689b4736",
    "metadata": {},
    "source": [
-    "Начнем тестировать наши модели."
+    "Начнем тестировать наши модели. Используем метрику BLEU."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "a13494e7-b2c9-42d3-90c8-c12718439b5c",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "llama3\n",
-      "Начало инициализации.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Начало инициализации.\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Инициализация завершена.\n",
+      "Russian-To-Elvish Score: 1.5027054919908146e-231\n",
+      "Elvish-To-Russian Score: 1.5469438467590993e-231\n",
+      "English-To-Elvish Score: 1.489018608388989e-231\n",
+      "Elvish-To-English Score: 1.4810351790853938e-231\n",
+      "deepseek-r1\n",
+      "Начало инициализации.\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Инициализация завершена.\n",
+      "Russian-To-Elvish Score: 1.4528078000449406e-231\n",
+      "Elvish-To-Russian Score: 1.4497066745242832e-231\n",
+      "English-To-Elvish Score: 1.3641065241088982e-231\n",
+      "Elvish-To-English Score: 1.459533643573846e-231\n",
+      "gemma3\n",
+      "Начало инициализации.\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n",
+      "Новый шаг инициализации...\n"
      ]
     }
    ],
@@ -435,8 +490,9 @@
     "    bleu_scores_english_to_elvish = []\n",
     "    bleu_scores_elvish_to_english = []\n",
     "\n",
-    "    for record in sequences:\n",
-    "        print('Одна запись обработана.')\n",
+    "    for i, record in enumerate(sequences[:5], start=1):\n",
+    "        if i % 50 == 0:\n",
+    "            print('Часть записей обработана.')\n",
     "\n",
     "        bleu_scores_russian_to_elvish.append(\n",
     "            sentence_bleu(\n",
@@ -482,14 +538,19 @@
    "id": "cb8bac93-780c-4afe-a8a2-5317107b4e49",
    "metadata": {},
    "source": [
-    "Вывод: Модель <...> показала себя лучше всего с показателем <...> => выбираем её.\n",
-    "В целом, перевод с русского на Старшую Речь можно выполнять напрямую через эталонный алгоритм (в начале файла), а остальные варианты задачи делать уже через выбранную модель.\n"
+    "Вывод:\n",
+    "В связи с тем, что мы работали на недостаточно мощном ПК, мы решили поставить всего 5 предложений на каждую модель (хотелось 200, как писалось изначально, но даже с 5-ю обработка шла очень долго).\n",
+    "Метрики крайне маленькие. Отдельно мы проверили работу моделей и увидели, что они начинают путаться и выдают очень кривые ответы.\n",
+    "Последняя модель - gemma3 застопорилась на этапе \"инициализации\", дальше мы не смогли её протестить.\n",
+    "Ещё одна неприятная вещь - слишком маленький словарь. 1274 записей - это хороший показатель для игровой/книжной вселенной, но слишком мало для модели...\n",
+    "\n",
+    "В будущем можно запустить эту программу на более хорошей видеокарте и сделать больше сравнений с эталонными переводами, возможно метрики улучшатся."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb5bc2cc-e754-415d-9622-37f603f0ecca",
+   "id": "d83575e7-60c1-4e54-9db7-3278775f429b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -511,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
