--- a/lr3/lr3.ipynb
+++ b/lr3/lr3.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "162808c6-fba2-447a-810f-1e416d35c049",
    "metadata": {
     "scrolled": true
@@ -24,15 +24,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests in /home/dan005/rock_team/venv/lib/python3.10/site-packages (2.32.3)\n",
-      "Requirement already satisfied: lxml in /home/dan005/rock_team/venv/lib/python3.10/site-packages (5.3.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/dan005/rock_team/venv/lib/python3.10/site-packages (from requests) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/dan005/rock_team/venv/lib/python3.10/site-packages (from requests) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/dan005/rock_team/venv/lib/python3.10/site-packages (from requests) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/dan005/rock_team/venv/lib/python3.10/site-packages (from requests) (2025.1.31)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+      "Requirement already satisfied: requests in c:\\users\\pavel\\onedrive\\desktop\\laba\\venv\\lib\\site-packages (2.32.3)\n",
+      "Collecting lxml\n",
+      "  Downloading lxml-5.3.1-cp310-cp310-win_amd64.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\pavel\\onedrive\\desktop\\laba\\venv\\lib\\site-packages (from requests) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\pavel\\onedrive\\desktop\\laba\\venv\\lib\\site-packages (from requests) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\pavel\\onedrive\\desktop\\laba\\venv\\lib\\site-packages (from requests) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\pavel\\onedrive\\desktop\\laba\\venv\\lib\\site-packages (from requests) (2025.1.31)\n",
+      "Downloading lxml-5.3.1-cp310-cp310-win_amd64.whl (3.8 MB)\n",
+      "   ---------------------------------------- 0.0/3.8 MB ? eta -:--:--\n",
+      "   -- ------------------------------------- 0.3/3.8 MB ? eta -:--:--\n",
+      "   ------------- -------------------------- 1.3/3.8 MB 5.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 3.8/3.8 MB 9.8 MB/s eta 0:00:00\n",
+      "Installing collected packages: lxml\n",
+      "Successfully installed lxml-5.3.1\n"
      ]
     }
    ],
@@ -42,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9d933fca-0e1a-4928-bde5-5a677f4769b2",
    "metadata": {},
    "outputs": [],
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fc4adc2c-54a6-4466-b1bc-b456d160e0c2",
    "metadata": {},
    "outputs": [],
@@ -84,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "814fbd56-1f92-40a6-9271-8d471e51403b",
    "metadata": {},
    "outputs": [],
@@ -122,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f4d86b4d-5563-4574-bb25-d1d9130608fb",
    "metadata": {
     "scrolled": true
@@ -214,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4a091f1c-0252-4eb7-85fa-cc6053cdaa22",
    "metadata": {},
    "outputs": [
@@ -381,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b1b8209a-3466-45ed-b7ab-b79276813746",
    "metadata": {},
    "outputs": [],
@@ -399,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "8d34c6a5-6964-43ea-b0e4-96964353186d",
    "metadata": {
     "scrolled": true
@@ -8358,7 +8363,7 @@
        "1274                                  спасибо  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8383,7 +8388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "7a4eb65a-552c-4f59-a33b-6d6e869ecc62",
    "metadata": {},
    "outputs": [],
@@ -8416,7 +8421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
