--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "f271ebd5-0728-4dfd-9f5f-0e5a102c3457",
    "metadata": {},
    "outputs": [],
@@ -137,18 +137,7 @@
     "\n",
     "        if not it_is_real_phrase:\n",
     "            # Стандартная обработка одиночного слова с подбором синонимов через сайт.\n",
-    "            translation = None\n",
-    "            try:\n",
-    "                translation = _try_to_find_russian_word_translation(word)\n",
-    "            except ValueError:\n",
-    "                for synonym in _synonyms_of_word(word):\n",
-    "                    try:\n",
-    "                        translation = _try_to_find_russian_word_translation(synonym)\n",
-    "                    except ValueError:\n",
-    "                        continue\n",
-    "\n",
-    "            if translation is None:\n",
-    "                translation = _transliterate_russian_to_latin(word)\n",
+    "            translation = _translate_russian_word(word, _synonyms_of_word_from_web_api)\n",
     "\n",
     "        if is_title:\n",
     "            translation = translation.capitalize()\n",
@@ -168,6 +157,28 @@
     "    return ' '.join(parts)\n",
     "\n",
     "\n",
+    "def _translate_russian_word(word: str, synonyms_finding_func) -> str:\n",
+    "    \"\"\"\n",
+    "    Переводит русское слово/словосочетание на Старшую Речь.\n",
+    "    При отсутствии слова в датасете использует перебор синонимов из функции `synonyms_finding_func`.\n",
+    "    Если последнее так же не помогло, то делает латинизацию слова.\n",
+    "    \"\"\"\n",
+    "    translation = None\n",
+    "    try:\n",
+    "        translation = _try_to_find_russian_word_translation(word)\n",
+    "    except ValueError:\n",
+    "        for synonym in _synonyms_of_word_from_web_api(word):\n",
+    "            try:\n",
+    "                translation = _try_to_find_russian_word_translation(synonym)\n",
+    "            except ValueError:\n",
+    "                continue\n",
+    "\n",
+    "    if translation is None:\n",
+    "        translation = _transliterate_russian_to_latin(word)\n",
+    "\n",
+    "    return translation\n",
+    "\n",
+    "\n",
     "def _try_to_find_russian_word_translation(word: str) -> str:\n",
     "    \"\"\"Ищет перевод русского слова/словосочетания в датасете.\"\"\"\n",
     "    result = df.loc[df['translation'] == word, 'text']\n",
@@ -178,10 +189,10 @@
     "\n",
     "\n",
     "def _find_phrases_that_starts_with_russian_word(word: str) -> list[str]:\n",
-    "    return df.loc[df['translation'].str.startswith(word) & df['translation'].str.contains(' '), 'translation'].tolist()\n",
+    "    return df.loc[df['translation'].str.startswith(word + ' '), 'translation'].tolist()\n",
     "\n",
     "\n",
-    "def _synonyms_of_word(word: str) -> str:\n",
+    "def _synonyms_of_word_from_web_api(word: str) -> str:\n",
     "    \"\"\"Выдаёт всевозможные синонимы заданного слова. Использует сетевой запрос.\"\"\"\n",
     "    html = requests.get(f'https://text.ru/synonym/{word}').text\n",
     "    \n",
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "32c6531b-60ec-4667-a1d3-be3311753b89",
    "metadata": {},
    "outputs": [
@@ -342,70 +353,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "id": "af6e3873-ca3d-4d71-96ba-255d87dc8885",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Translator:\n",
-    "    \"\"\"Обёртка над моделью LLM из Olama для реализации перевода.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Обёртка над моделью LLM из Olama для реализации перевода.\n",
+    "    Реализованы двухсторонние переводы с русского/английского на Старшую речь.\n",
+    "    Поступаемый текст сначала токенизируется, лемматизируется, потом происходит поиск используемых слов\n",
+    "    по словарю.\n",
+    "    После всего этого исходный текст (всегда русский либо эльфский) и собранная часть словаря отправляются модели.\n",
+    "    Это ускорило обработку во много раз, поскольку изначально модели залился словарь целиком (это был этап \"инициализации\"),\n",
+    "    а потом происходили переводы.\n",
+    "    Здесь нам даже не нужно хранить историю предыдущих сообщений.\n",
+    "    \"\"\"\n",
     "\n",
-    "    _ONE_REQUEST_RECORD_COUNT = 100\n",
+    "    _RESULT_LIMITER: str = 'RESULT'\n",
+    "    _SYNONYM_SEPARATOR: str = ','\n",
     "\n",
-    "    def __init__(self, name: str) -> None:\n",
-    "        self._name = name\n",
-    "        self._context_messages = []\n",
-    "\n",
-    "    def init(self) -> None:\n",
-    "        \"\"\"Подаёт на вход модели порционно все слова из словаря, после чего можно пользоваться методом `translate`.\"\"\"\n",
-    "\n",
-    "        print('Начало инициализации.')\n",
-    "        self._request('Сейчас я буду отправлять тебе порциями слова на языке Старшей Речи и переводы на русский из словаря. '\n",
-    "                      'Тебе нужно просто запоминать их и отвечать \"ok\". Потом я отправлю тебе \"go\" - это означает, что словарь кончился. '\n",
-    "                      'Потом ты сможешь переводить с русского/английского на Старшую Речь и наоборот. '\n",
-    "                      'Если слова нет в словаре, то попробуй подобрать по синониму или самое подходящее по смыслу. '\n",
-    "                      'В самом худшем случае - латинизируй текст.')\n",
-    "\n",
-    "        portion = ''\n",
-    "        for record in df.itertuples():\n",
-    "            portion += f'{record[1]} - {record[2]}\\n'\n",
-    "            if record[0] % self._ONE_REQUEST_RECORD_COUNT == 0 or record[0] == len(df) - 1:\n",
-    "                print('Новый шаг инициализации...')\n",
-    "                self._request(portion)\n",
-    "                portion = ''\n",
-    "\n",
-    "        self._request('go')\n",
-    "        print('Инициализация завершена.')\n",
+    "    def __init__(self, model_name: str) -> None:\n",
+    "        self._model_name = model_name\n",
     "\n",
     "    def translate_russian_to_elvish(self, text: str) -> str:\n",
     "        \"\"\"Переводит русский текст на Старшую Речь.\"\"\"\n",
-    "        return self._request(f'Переведи русский текст \"{text}\" на Старшую Речь согласно словарю. Напиши только перевод.')\n",
+    "        dictionary = self._make_dictionary_by_russian_text(text)\n",
+    "        return self._request(f'Переведи русский текст \"{text}\" на другой язык согласно словарю:\\n' + dictionary)\n",
     "\n",
     "    def translate_elvish_to_russian(self, text: str) -> str:\n",
     "        \"\"\"Переводит текст на языке Старшей Речи на русский.\"\"\"\n",
-    "        return self._request(f'Переведи текст на языке Старшей Речи \"{text}\" на русский согласно словарю. Напиши только перевод.')\n",
+    "        dictionary = self._make_dictionary_by_elvish_text(text)\n",
+    "        return self._request(f'Переведи вымышленный текст \"{text}\" на русский согласно словарю:\\n' + dictionary)\n",
     "\n",
     "    def translate_english_to_elvish(self, text: str) -> str:\n",
     "        \"\"\"Переводит английский текст на Старшую Речь.\"\"\"\n",
-    "        text = self._request(f'Переведи английский текст \"{text}\" на русский. Напиши только перевод.')\n",
+    "        text = self._request(f'Переведи английский текст \"{text}\" на русский.')\n",
     "        return self.translate_russian_to_elvish(text)\n",
     "\n",
     "    def translate_elvish_to_english(self, text: str) -> str:\n",
     "        \"\"\"Переводит текст на языке Старшей Речи на английский.\"\"\"\n",
     "        text = self.translate_elvish_to_russian(text)\n",
-    "        return self._request(f'Переведи русский текст \"{text}\" на английский. Напиши только перевод.')\n",
+    "        return self._request(f'Переведи русский текст \"{text}\" на английский.')\n",
     "\n",
-    "    def _request(self, text: str) -> str:\n",
+    "    def _make_dictionary_by_russian_text(self, text: str) -> str:\n",
+    "        \"\"\"Формирует текстовый словарь, опираясь на слова используемые в русском тексте.\"\"\"\n",
+    "        dictionary: str = ''\n",
+    "\n",
+    "        words = self._extract_lemms(text)\n",
+    "        for word in words:\n",
+    "            dictionary += word + ' - ' + _translate_russian_word(word, self._synonyms_of_word) + '\\n'\n",
+    "            for translation, phrase in self._russian_phrases_that_starts_with_word_and_translations(word):\n",
+    "                dictionary += phrase + ' - ' + translation + '\\n'\n",
+    "\n",
+    "        return dictionary\n",
+    "\n",
+    "    def _make_dictionary_by_elvish_text(self, text: str) -> str:\n",
+    "        \"\"\"Формирует текстовый словарь, опираясь на слова используемые в тексте на языке Старшей Речи.\"\"\"\n",
+    "        dictionary: str = ''\n",
+    "\n",
+    "        words = self._extract_words(text)\n",
+    "        for word in words:\n",
+    "            for translation in self._elvish_word_translations(word):\n",
+    "                dictionary += word + ' - ' + translation + '\\n'\n",
+    "            for phrase, translation in self._elvish_phrases_that_starts_with_word_and_translations(word):\n",
+    "                dictionary += phrase + ' - ' + translation + '\\n'\n",
+    "\n",
+    "        return dictionary\n",
+    "\n",
+    "    def _extract_lemms(self, text: str) -> list[str]:\n",
+    "        \"\"\"Извлекает из текста слова и приводит их к начальной форме.\"\"\"\n",
+    "        return [_word_to_lemm(word) for word in self._extract_words(text)]\n",
+    "\n",
+    "    def _extract_words(self, text: str) -> list[str]:\n",
+    "        \"\"\"Извлекает из текста слова и переводит их в нижний регистр.\"\"\"\n",
+    "        text = self._remove_punctuation(text)\n",
+    "        return text.lower().split()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _remove_punctuation(text: str) -> str:\n",
+    "        \"\"\"Удаляет из текста все знаки препинания и пунктуации.\"\"\"\n",
+    "        return text.translate(\n",
+    "            str.maketrans('', '', string.punctuation),\n",
+    "        )\n",
+    "\n",
+    "    def _synonyms_of_word(self, word: str) -> list[str]:\n",
+    "        \"\"\"Выдаёт синонимы слова, которые подобрала модель.\"\"\"\n",
+    "        text = self._request(f'Подбери синонимы слова \"{word}\". Разделяй их через {self._SYNONYM_SEPARATOR}.')\n",
+    "        return [word.strip() for word in text.split(self._SYNONYM_SEPARATOR)]\n",
+    "\n",
+    "    def _russian_phrases_that_starts_with_word_and_translations(self, word: str) -> list[tuple[str, str]]:\n",
+    "        \"\"\"\n",
+    "        Выдает все фразы и их переводы, которые начинаются с переданного русского слова.\n",
+    "        Первое в каждом кортеже эльфское, второе - русское.\n",
+    "        \"\"\"\n",
+    "        return self._phrases_that_starts_with_word_and_translations(word, 'translation')\n",
+    "\n",
+    "    def _elvish_phrases_that_starts_with_word_and_translations(self, word: str) -> list[tuple[str, str]]:\n",
+    "        \"\"\"\n",
+    "        Выдает все фразы и их переводы, которые начинаются с переданного слова на Старшей Речи.\n",
+    "        Первое в каждом кортеже эльфское, второе - русское.\n",
+    "        \"\"\"\n",
+    "        return self._phrases_that_starts_with_word_and_translations(word, 'text')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _phrases_that_starts_with_word_and_translations(word: str, col: str) -> list[tuple[str, str]]:\n",
+    "        \"\"\"\n",
+    "        Выдает все фразы и их переводы, которые начинаются с переданного слова в заданном столбце `df`.\n",
+    "        Первое в каждом кортеже эльфское, второе - русское.\n",
+    "        \"\"\"\n",
+    "        return df[df[col].str.startswith(word + ' ')].itertuples(index=False)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _elvish_word_translations(word: str) -> list[str]:\n",
+    "        \"\"\"Выдает всевозможные переводы слова на Старшей Речи.\"\"\"\n",
+    "        result = df.loc[df['text'] == word, 'translation']\n",
+    "        return result.values\n",
+    "\n",
+    "    def _request(self, text: str, extract_result: bool = True) -> str:\n",
     "        \"\"\"Отправляет запрос модели и выдает ответ.\"\"\"\n",
-    "        self._context_messages.append({\n",
+    "        if extract_result:\n",
+    "            text += f'\\nСлева и справа от результата напиши \"{self._RESULT_LIMITER}\". Больше ничего лишнего не пиши.'\n",
+    "\n",
+    "        answer = ollama.chat(model=self._model_name, messages=[{\n",
     "            'role': 'user', \n",
     "            'content': text,\n",
-    "        })\n",
-    "        answer = ollama.chat(model=self._name, messages=self._context_messages)['message']['content']\n",
+    "        }])['message']['content']\n",
+    "\n",
+    "        # DeepSeek thinking isn't needed :)\n",
     "        if '</think>' in answer:\n",
     "            answer = answer.split('</think>')[1]\n",
     "\n",
+    "        answer = answer.split(self._RESULT_LIMITER)[1]\n",
     "        return answer.strip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb5b8e91-addf-4dd9-86a0-9fcf1cd52055",
+   "metadata": {},
+   "source": [
+    "Посмотрим, что получилось:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "6d6704f8-2608-4c6d-b725-18e4e90afcc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love cooking new food.\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Translator('llama3')\n",
+    "print(t.translate_elvish_to_english('Aé lyubit gotovit noel ite.'))"
    ]
   },
   {
@@ -418,71 +525,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "a13494e7-b2c9-42d3-90c8-c12718439b5c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "llama3\n",
-      "Начало инициализации.\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Инициализация завершена.\n",
-      "Russian-To-Elvish Score: 1.5027054919908146e-231\n",
-      "Elvish-To-Russian Score: 1.5469438467590993e-231\n",
-      "English-To-Elvish Score: 1.489018608388989e-231\n",
-      "Elvish-To-English Score: 1.4810351790853938e-231\n",
-      "deepseek-r1\n",
-      "Начало инициализации.\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Инициализация завершена.\n",
-      "Russian-To-Elvish Score: 1.4528078000449406e-231\n",
-      "Elvish-To-Russian Score: 1.4497066745242832e-231\n",
-      "English-To-Elvish Score: 1.3641065241088982e-231\n",
-      "Elvish-To-English Score: 1.459533643573846e-231\n",
-      "gemma3\n",
-      "Начало инициализации.\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n",
-      "Новый шаг инициализации...\n"
+      "llama3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "for model_name in ('llama3', 'deepseek-r1', 'gemma3'):\n",
     "    print(model_name)\n",
-    "\n",
     "    translator = Translator(model_name)\n",
-    "    translator.init()\n",
     "\n",
     "    bleu_scores_russian_to_elvish = []\n",
     "    bleu_scores_elvish_to_russian = []\n",
@@ -490,7 +559,7 @@
     "    bleu_scores_english_to_elvish = []\n",
     "    bleu_scores_elvish_to_english = []\n",
     "\n",
-    "    for i, record in enumerate(sequences[:5], start=1):\n",
+    "    for i, record in enumerate(sequences, start=1):\n",
     "        if i % 50 == 0:\n",
     "            print('Часть записей обработана.')\n",
     "\n",
@@ -534,20 +603,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cb8bac93-780c-4afe-a8a2-5317107b4e49",
-   "metadata": {},
-   "source": [
-    "Вывод:\n",
-    "В связи с тем, что мы работали на недостаточно мощном ПК, мы решили поставить всего 5 предложений на каждую модель (хотелось 200, как писалось изначально, но даже с 5-ю обработка шла очень долго).\n",
-    "Метрики крайне маленькие. Отдельно мы проверили работу моделей и увидели, что они начинают путаться и выдают очень кривые ответы.\n",
-    "Последняя модель - gemma3 застопорилась на этапе \"инициализации\", дальше мы не смогли её протестить.\n",
-    "Ещё одна неприятная вещь - слишком маленький словарь. 1274 записей - это хороший показатель для игровой/книжной вселенной, но слишком мало для модели...\n",
-    "\n",
-    "В будущем можно запустить эту программу на более хорошей видеокарте и сделать больше сравнений с эталонными переводами, возможно метрики улучшатся."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d83575e7-60c1-4e54-9db7-3278775f429b",
@@ -572,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
